@@ -1,0 +1,7 @@
+package dtool.ast.definitions;
+
+public interface ICallableElement {
+	
+	IFunctionParameter[] getParameters();
+	
+}
